<resources>
    <string name="app_name">About Dart</string>
    <string name="event_time">16:35</string>
    <string name="event_date">27 November</string>
    <string name="event_theme">Dart: второе пришествие</string>
    <string name="event_location">Room 2</string>
    <string name="sphere">Frontend</string>
    <string name="speaker">Evgeny Kot</string>
    <string name="workplace">at Wrike St. Petersburg, Russia</string>
    <string name="annotation">Привет, я - Кот. И ещё GDE в Dart и Flutter. И работаю во Wrike. Так получилось, что мы используем Dart в течение четырёх лет и написали огромную кучу кода (около 1kk строк). Мы пишем наш сервис используя на фронтенде исключительно в Dart (вообще нет JS). Также есть некоторое количество бекенда, ну и с появлением Flutter мы, конечно, начинаем смотреть на мобильную разработку. Можно без зазрения совести сказать, что мы раньше всех начали использовать этот язык в production разработке. Что же такого поменялось за эти годы в языке, в технологиях и мире, что вам НУЖНО ПОСЛУШАТЬ этот доклад? Вот об этом и поговорим.</string>
    <string name="topicList">Topic list</string>
    <string name="margin">10dp</string>
    <string name="about_speaker">Начинал с C++ и железяк, потом переключился на .Net и C#. Работал много где, но как-то так получилось, что работая в Dell пришлось заниматься CoffeeScript и фронтендом ¯\_(ツ)_/¯. Сейчас работаю во Wrike, высоконагруженном SAAS приложении с очень богатым клиентским кодом, который мы пишем на Dart и Angular. Участник программного комитета HolyJS, спикер. Google Developer Expert.</string>
    <string name="position">Teamlead</string>
</resources>
